Authhenticate ve autherize

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "www.memo.com",
+    "Issuer": "www.memo.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysecretkeymysecretkeymysecretkey"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
